another title added

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <p>Lorem Ipsum First change</p>
 <h3> This is yet another title</h3>
 <p>Bet you didn't see this other change coming either.</p>
+<h2>beep boop, another title</h2>
+<p>Yep. Another title. I hope you like reading.</p>
 </body>
 </html>
