--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Nep huiswerkopdracht</title>
 </head>
 <body>
-<h2>Dit is een andere titel, die gaat niet over Pim</h2>
+<h2>Dit is een andere titel, die gaat stiekem wel over Pim</h2>
 <p>Lorem Ipsum First change</p>
 <h3> This is yet another title</h3>
 <p>Bet you didn't see this other change coming either.</p>
